base

   -- removed legacy support for factory names "BroadcastHandler", "MulticastHandler",
      and "UdpHandler" - instead use "UdpBroadcastHandler", "UdpMulticastHandler"
	  and "UdpUnicastHandler"

   -- separated MonitorMetrics class definition and implementation away from Cie.h/cpp file.
   
   -- consolidated platform specific functions into the subdirectory 'platform'

--------------------------------------------------------------------------------
dafif


--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
glut


--------------------------------------------------------------------------------
graphics


--------------------------------------------------------------------------------
hla

   -- added code to support HLA interface

--------------------------------------------------------------------------------
instruments


--------------------------------------------------------------------------------
iodevice


--------------------------------------------------------------------------------
linearsystem



--------------------------------------------------------------------------------
maps


--------------------------------------------------------------------------------
models

   JSBSimModel class
      -- Added new slot parameter ('debugLevel') to set the debug level for JSBSim
         model instance. This controls the verbosity (i.e., output printed to console)
         of the model itself.  Slot parameter accepts an integer value.

--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   Autopilot class
      -- Fixed spelling error with 'velocityContoller' to 'velocityController'

