@@ -5,7 +5,7 @@
 #define __oe_base_Number_H__
 
 #include "openeaagles/base/Object.h"
-#include "openeaagles/base/util/datatypes.h"
+#include <cstdint>
 
 namespace oe {
 namespace base {
@@ -36,13 +36,14 @@ namespace base {
 //       class type of the object.
 //
 //------------------------------------------------------------------------------
-class Number : public Object {
+class Number : public Object
+{
    DECLARE_SUBCLASS(Number, Object)
 
 public:
    Number()                         { val = 0.0;   STANDARD_CONSTRUCTOR() }
    Number(const int value)          { val = static_cast<double>(value); STANDARD_CONSTRUCTOR() }
-   Number(const Integer64 value)    { val = static_cast<double>(value); STANDARD_CONSTRUCTOR() }
+   Number(const int64_t value)      { val = static_cast<double>(value); STANDARD_CONSTRUCTOR() }
    Number(const bool value)         { val = (value ? 1.0 : 0.0); STANDARD_CONSTRUCTOR() }
    Number(const double value)       { val = value; STANDARD_CONSTRUCTOR() }
    Number(const float value)        { val = value; STANDARD_CONSTRUCTOR() }
@@ -51,7 +52,7 @@ public:
    double getDouble() const         { return val; }
    float getFloat() const           { return static_cast<float>(val); }
    int getInt() const               { return static_cast<int>(val); }
-   Integer64 getInt64() const       { return static_cast<Integer64>(val); }
+   int64_t getInt64() const         { return static_cast<int64_t>(val); }
    bool getBoolean() const          { return (val != 0.0); }
 
    virtual void setValue(const double nv)   { val = nv; }
@@ -62,7 +63,7 @@ protected:
    double val;   // value of this object
 };
 
-} // End base namespace
-} // End oe namespace
+}
+}
 
 #endif
