@@ -5,11 +5,5 @@
 #define __oe_platform_linux_support0_H__
 
 #include <values.h>       // FLT_MIN
-//#include <sys/socket.h>
-//#include <netinet/in.h>
-//#include <unistd.h>
-//#include <string.h>
-//#include <stdint.h>
-
 
 #endif
