@@ -1,14 +1,0 @@
-
-#ifndef __oe_base_util_datatypes_linux_H__
-#define __oe_base_util_datatypes_linux_H__
-
-namespace oe {
-namespace base {
-
-typedef long long int Integer64;
-
-}
-}
-
-#endif
-
