@@ -1,14 +1,0 @@
-
-#ifndef __oe_base_util_datatypes_mingw_H__
-#define __oe_base_util_datatypes_mingw_H__
-
-namespace oe {
-namespace base {
-
-typedef LONGLONG  Integer64;
-
-}
-}
-
-#endif
-
